--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,10 @@
 ##################
 # intellij files #
 ##################
+*.iws
 *.iml
+*.ipr
 !.idea/runConfigurations
-.idea/inspectionProfiles
-.idea/libraries
-.idea/dataSources
 .idea/**
 .idea/*.*
 
@@ -22,22 +21,44 @@
 /.settings
 /.tern-project
 
+###########
+### STS ###
+###########
+.apt_generated
+.factorypath
+.springBeans
+.sts4-cache
+
+
+################
+### NetBeans ###
+################
+/nbproject/private/
+/nbbuild/
+/nbdist/
+/.nb-gradle/
+/build/
+
 #########################
 # maven generated files #
 #########################
 /target
-/pom.xml.bak
+/.mvn/
+*.versionsBackup
 
 #############
 # Zip files #
 #############
 *.tar
+*.tar.gz
 *.zip
 *.7z
 *.dmg
 *.gz
 *.iso
 *.jar
+*.war
+*.ear
 *.rar
 
 ##############
@@ -61,6 +82,7 @@
 /build
 /.gradle
 /gradle
+/out
 # Ignore Gradle GUI config
 gradle-app.setting
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
@@ -77,9 +99,3 @@ gradle-app.setting
 ##############################################################
 hs_err_pid*
 /.attach_pid*
-
-###############################
-# spring-boot generated files #
-###############################
-/out
-/classes
