--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ projectSourceCompatibility=1.8
 gradlePluginVersionsVersion=0.29.0
 licenseGradlePluginVersion=0.15.0
 gradlePluginLombokVersion=4.0.0
-springBootGradlePluginVersion=2.3.3.RELEASE
+springBootGradlePluginVersion=2.4.0
 springGradlePluginDependencyManagementVersion=1.0.10.RELEASE
 gradleAptPluginVersion=0.21
 #########################
