added intellij run configurations and externalized strings in the SwaggerConfiguration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,11 @@ server:
 
 app:
   name: ${name}
+  base-package: io.github.astrapi69.template
+  api-info-title: template REST API
+  api-info-description: REST API template description
+  contact-name: template inc.
+  contact-url: www.template.org
   dir: ${user.home}/.${app.name}
   db-name: template
   db-host: localhost
