--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # project properties #
 ######################
 groupPackage=io.github.astrapi69
-projectVersion=2.4.0
+projectVersion=2.5.0-SNAPSHOT
 projectSourceCompatibility=1.8
 ###########################
 # gradle-plugins versions #
