--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,27 @@
 groupPackage=io.github.astrapi69
 projectVersion=2.5.0-SNAPSHOT
 projectSourceCompatibility=1.8
+projectInceptionYear=2021
+projectHolderUsername=astrapi69
+projectLeaderName=Asterios Raptis
+slash=/
+colon=:
+issuesPath=/issues
+projectDescription=Template project for create java spring boot projects
+projectScmProviderDomain=github.com
+projectScmProviderUrl=https://github.com/
+projectScmGitUrlPrefix=scm:git:git:@
+projectScmGitUrlSuffix=.git
+projectLicenseName=MIT License
+projectLicenseUrl=http://www.opensource.org/licenses/mit-license.php
+projectOrganizationName=Asterios Raptis
+projectOrganizationUrl=https://astrapi69.github.io/
+projectLicenseDistribution=repo
+projectIssueManagementSystem=GitHub
+projectRepositoriesReleasesRepoUrl=https://oss.sonatype.org/service/local/staging/deploy/maven2/
+projectRepositoriesSnapshotsRepoUrl=https://oss.sonatype.org/content/repositories/snapshots
+projectRepositoriesUserNameKey=ossrhUsername
+projectRepositoriesPasswordKey=ossrhPassword
 ###########################
 # gradle-plugins versions #
 ###########################
@@ -20,13 +41,13 @@ lombokVersion=1.18.16
 entApiVersion=2
 entCoreVersion=2
 beanMapperApiVersion=1
-genericMapperVersion=2.4
+genericMapperVersion=2.5
 springBootExtensionsVersion=1.3
-fileWorkerVersion=5.7
+fileWorkerVersion=5.10
 springfoxSwaggerVersion=2.9.2
 pgEnumUsertypeVersion=1.1
 vladmihalceaHibernateTypes52Version=2.10.0
-throwAbleVersion=1.4
+throwAbleVersion=1.7
 springToolExtensionsVersion=1.8
 jjwtVersion=0.11.2
 authApiVersion=5.3
@@ -38,5 +59,11 @@ xstreamVersion=1.4.14
 ##############################
 # test dependencies versions #
 ##############################
+gradleMigrationDataVersion=1.1
+sillyIoVersion=1.6
 testcontainersVersion=1.15.0
 jobjContractVerifierVersion=3.3
+##########################
+# for deploy on sonatype #
+##########################
+systemProp.org.gradle.internal.publish.checksums.insecure=true
