--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
 		}
 	}
 	dependencies {
-		classpath "io.franzbecker:gradle-lombok:$gradlePluginLombokVersion"
+		classpath "io.freefair.gradle:lombok-plugin:$gradlePluginLombokVersion"
 		classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootGradlePluginVersion"
 		classpath "io.spring.gradle:dependency-management-plugin:$springGradlePluginDependencyManagementVersion"
 		classpath "com.github.ben-manes:gradle-versions-plugin:$gradlePluginVersionsVersion"
@@ -16,7 +16,7 @@ buildscript {
 	}
 }
 
-apply plugin: "io.franzbecker.gradle-lombok"
+apply plugin: "io.freefair.lombok"
 apply plugin: "org.springframework.boot"
 apply plugin: "io.spring.dependency-management"
 apply plugin: "java"
@@ -25,8 +25,6 @@ apply plugin: "signing"
 apply plugin: "jacoco"
 apply plugin: "eclipse"
 apply plugin: "idea"
-apply plugin: "net.ltgt.apt"
-apply plugin: "net.ltgt.apt-idea"
 apply plugin: "com.github.ben-manes.versions"
 apply plugin: "com.github.hierynomus.license"
 
@@ -40,48 +38,12 @@ repositories {
 	mavenCentral()
 }
 
-dependencies {
-	compileOnly("org.projectlombok:lombok:$lombokVersion")
-	annotationProcessor("org.projectlombok:lombok:$lombokVersion")
-	annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
-	implementation("io.github.astrapi69:bean-mapper-api:$beanMapperApiVersion")
-	implementation("io.github.astrapi69:generic-mapper:$genericMapperVersion")
-	implementation("io.github.astrapi69:file-worker:$fileWorkerVersion")
-	implementation("de.alpharogroup:spring-boot-extensions:$springBootExtensionsVersion")
-	implementation("de.alpharogroup:json-extensions:$jsonExtensionsVersion")
-	implementation("de.alpharogroup:ent-api:$entApiVersion")
-	implementation("de.alpharogroup:ent-core:$entCoreVersion")
-	implementation("io.github.astrapi69:throw-able:$throwAbleVersion")
-	implementation("de.alpharogroup:spring-tool-extensions:$springToolExtensionsVersion")
-	implementation("io.jsonwebtoken:jjwt-api:$jjwtVersion")
-	implementation("io.jsonwebtoken:jjwt-impl:$jjwtVersion")
-	implementation("io.jsonwebtoken:jjwt-jackson:$jjwtVersion")
-	implementation("de.alpharogroup:auth-api:$authApiVersion")
-	implementation("de.alpharogroup:auth:$authVersion")
-	implementation("de.alpharogroup:mystic-crypt:$mysticCryptVersion")
-	implementation("de.alpharogroup:pg-enum-usertype:$pgEnumUsertypeVersion")
-	implementation("com.vladmihalcea:hibernate-types-52:$vladmihalceaHibernateTypes52Version")
-	implementation("de.alpharogroup:servlet-kt-extensions:$servletKtExtensionsVersion")
-	implementation("io.springfox:springfox-swagger2:$springfoxSwaggerVersion")
-	implementation("io.springfox:springfox-swagger-ui:$springfoxSwaggerVersion")
-	implementation("com.thoughtworks.xstream:xstream:$xstreamVersion")
-	implementation("org.postgresql:postgresql")
-	implementation("org.flywaydb:flyway-core")
-	implementation("org.springframework:spring-oxm")
-	implementation("org.springframework.boot:spring-boot-starter-web")
-	implementation("org.springframework.boot:spring-boot-configuration-processor")
-	implementation("org.springframework.boot:spring-boot-starter-aop")
-	implementation("org.springframework.boot:spring-boot-starter-actuator")
-	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-	implementation("org.springframework.boot:spring-boot-starter-validation")
-	testImplementation("org.testcontainers:testcontainers:$testcontainersVersion")
-	testImplementation("org.testcontainers:postgresql:$testcontainersVersion")
-	testImplementation("de.alpharogroup:jobj-contract-verifier:$jobjContractVerifierVersion")
-	testImplementation("io.github.astrapi69:gradle-migration-data:$gradleMigrationDataVersion")
-	testImplementation("io.github.astrapi69:silly-io:$sillyIoVersion")
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+tasks.withType(JavaCompile) {
+	options.encoding = "UTF-8"
+	// uncomment the next line for build with compiler argument -Xlint:deprecation
+	// options.compilerArgs << "-Xlint:deprecation"
+	// uncomment the next line for build with compiler argument -Xlint:unchecked
+	// options.compilerArgs << "-Xlint:unchecked"
 }
 
 license {
@@ -151,4 +113,48 @@ javadoc {
 
 test {
 	useJUnitPlatform()
+}
+
+dependencies {
+	compileOnly("org.projectlombok:lombok:$lombokVersion")
+	annotationProcessor("org.projectlombok:lombok:$lombokVersion")
+	annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
+	implementation("io.github.astrapi69:bean-mapper-api:$beanMapperApiVersion")
+	implementation("io.github.astrapi69:generic-mapper:$genericMapperVersion")
+	implementation("io.github.astrapi69:file-worker:$fileWorkerVersion")
+	implementation("io.github.astrapi69:spring-boot-extensions:$springBootExtensionsVersion")
+	implementation("io.github.astrapi69:json-extensions:$jsonExtensionsVersion")
+	implementation("io.github.astrapi69:ent-api:$entApiVersion")
+	implementation("io.github.astrapi69:ent-core:$entCoreVersion")
+	implementation("io.github.astrapi69:throw-able:$throwAbleVersion")
+	implementation("io.github.astrapi69:spring-tool-extensions:$springToolExtensionsVersion")
+	implementation("io.jsonwebtoken:jjwt-api:$jjwtVersion")
+	implementation("io.jsonwebtoken:jjwt-impl:$jjwtVersion")
+	implementation("io.jsonwebtoken:jjwt-jackson:$jjwtVersion")
+	implementation("de.alpharogroup:auth-api:$authApiVersion")
+	implementation("de.alpharogroup:auth:$authVersion")
+	implementation("de.alpharogroup:mystic-crypt:$mysticCryptVersion")
+	implementation("de.alpharogroup:pg-enum-usertype:$pgEnumUsertypeVersion")
+	implementation("com.vladmihalcea:hibernate-types-52:$vladmihalceaHibernateTypes52Version")
+	implementation("io.github.astrapi69:servlet-kt-extensions:$servletKtExtensionsVersion")
+	implementation("io.springfox:springfox-swagger2:$springfoxSwaggerVersion")
+	implementation("io.springfox:springfox-swagger-ui:$springfoxSwaggerVersion")
+	implementation("com.thoughtworks.xstream:xstream:$xstreamVersion")
+	implementation("org.postgresql:postgresql")
+	implementation("org.flywaydb:flyway-core")
+	implementation("org.springframework:spring-oxm")
+	implementation("org.springframework.boot:spring-boot-starter-web")
+	implementation("org.springframework.boot:spring-boot-configuration-processor")
+	implementation("org.springframework.boot:spring-boot-starter-aop")
+	implementation("org.springframework.boot:spring-boot-starter-actuator")
+	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+	implementation("org.springframework.boot:spring-boot-starter-validation")
+	testImplementation("org.testcontainers:testcontainers:$testcontainersVersion")
+	testImplementation("org.testcontainers:postgresql:$testcontainersVersion")
+	testImplementation("de.alpharogroup:jobj-contract-verifier:$jobjContractVerifierVersion")
+	testImplementation("io.github.astrapi69:gradle-migration-data:$gradleMigrationDataVersion")
+	testImplementation("io.github.astrapi69:silly-io:$sillyIoVersion")
+	testImplementation("org.springframework.boot:spring-boot-starter-test")
+	testCompileOnly("org.projectlombok:lombok:$lombokVersion")
+	testAnnotationProcessor("org.projectlombok:lombok:$lombokVersion")
 }
