--- a/gradle.properties
+++ b/gradle.properties
@@ -28,42 +28,46 @@ projectRepositoriesPasswordKey=ossrhPassword
 ###########################
 # gradle-plugins versions #
 ###########################
-gradlePluginVersionsVersion=0.39.0
-licenseGradlePluginVersion=0.15.0
-gradlePluginLombokVersion=4.0.0
-springBootGradlePluginVersion=2.4.0
-springGradlePluginDependencyManagementVersion=1.0.10.RELEASE
+gradlePluginVersionsVersion=0.41.0
+licenseGradlePluginVersion=0.16.1
+gradlePluginLombokVersion=6.3.0
+springBootGradlePluginVersion=2.5.2
+springGradlePluginDependencyManagementVersion=1.0.11.RELEASE
 gradleAptPluginVersion=0.21
 #########################
 # dependencies versions #
 #########################
 lombokVersion=1.18.22
-entApiVersion=2
-entCoreVersion=2
-beanMapperApiVersion=1.1
-genericMapperVersion=2.5
-springBootExtensionsVersion=1.3
-fileWorkerVersion=5.10
+entApiVersion=2.3
+entCoreVersion=2.3
+beanMapperApiVersion=1.2
+genericMapperVersion=2.6
+springBootExtensionsVersion=1.4
+springToolExtensionsVersion=1.10
+fileWorkerVersion=8.1
 springfoxSwaggerVersion=2.9.2
 pgEnumUsertypeVersion=1.1
-vladmihalceaHibernateTypes52Version=2.10.0
+vladmihalceaHibernateTypes52Version=2.14.0
 throwAbleVersion=1.7
-springToolExtensionsVersion=1.8
 jjwtVersion=0.11.2
 authApiVersion=5.3
 authVersion=5.4
 mysticCryptVersion=7.5
-servletKtExtensionsVersion=1.1
-jsonExtensionsVersion=1
-xstreamVersion=1.4.14
+servletKtExtensionsVersion=1.4
+jsonExtensionsVersion=1.2
+xstreamVersion=1.4.18
 ##############################
 # test dependencies versions #
 ##############################
 gradleMigrationDataVersion=1.2.1
 sillyIoVersion=1.6
-testcontainersVersion=1.15.0
+testcontainersVersion=1.16.2
 jobjContractVerifierVersion=3.3
 ##########################
 # for deploy on sonatype #
 ##########################
 systemProp.org.gradle.internal.publish.checksums.insecure=true
+org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+org.gradle.vfs.watch=true
