--- a/gradle.properties
+++ b/gradle.properties
@@ -33,7 +33,6 @@ licenseGradlePluginVersion=0.16.1
 gradlePluginLombokVersion=6.3.0
 springBootGradlePluginVersion=2.5.2
 springGradlePluginDependencyManagementVersion=1.0.11.RELEASE
-gradleAptPluginVersion=0.21
 #########################
 # dependencies versions #
 #########################
@@ -42,27 +41,17 @@ entApiVersion=2.3
 entCoreVersion=2.3
 beanMapperApiVersion=1.2
 genericMapperVersion=2.6
-springBootExtensionsVersion=1.4
-springToolExtensionsVersion=1.10
-fileWorkerVersion=8.1
+springToolExtensionsVersion=1.11-SNAPSHOT
 springfoxSwaggerVersion=2.9.2
-pgEnumUsertypeVersion=1.1
-vladmihalceaHibernateTypes52Version=2.14.0
-throwAbleVersion=1.7
-jjwtVersion=0.11.2
-authApiVersion=5.3
-authVersion=5.4
-mysticCryptVersion=7.5
-servletKtExtensionsVersion=1.4
-jsonExtensionsVersion=1.2
 xstreamVersion=1.4.18
 ##############################
 # test dependencies versions #
 ##############################
+throwAbleVersion=1.7
+fileWorkerVersion=8.1
 gradleMigrationDataVersion=1.2.1
 sillyIoVersion=1.6
 testcontainersVersion=1.16.2
-jobjContractVerifierVersion=3.3
 ##########################
 # for deploy on sonatype #
 ##########################
