--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,6 @@
+group = "$groupPackage" as Object
+version = "$projectVersion" as Object
+description = "$rootProject.name"
 
 buildscript {
 
@@ -27,10 +30,7 @@ apply plugin: "idea"
 apply plugin: "com.github.ben-manes.versions"
 apply plugin: "com.github.hierynomus.license"
 
-group = "$groupPackage"
-version = "$projectVersion"
-description = "$rootProject.name"
-sourceCompatibility = "$projectSourceCompatibility"
+sourceCompatibility = "$projectSourceCompatibility" as Object
 
 repositories {
 	mavenLocal()
@@ -45,9 +45,105 @@ tasks.withType(JavaCompile) {
 	// options.compilerArgs << "-Xlint:unchecked"
 }
 
+task sourcesJar(type: Jar) {
+	archiveClassifier.set("sources")
+	from(sourceSets.main.allJava)
+}
+
+task javadocJar(type: Jar) {
+	from javadoc
+	archiveClassifier.set("javadoc")
+	javadoc.properties.failOnError = true
+}
+
+javadoc {
+	if(JavaVersion.current().isJava9Compatible()) {
+		options.addBooleanOption("html5", true)
+	}
+	failOnError = false
+	exclude 'io/github/astrapi69/template/**'
+}
+
+def releaseVersion = !version.endsWith("SNAPSHOT")
+
+publishing {
+	publications {
+		mavenJava(MavenPublication) {
+			artifactId = "$rootProject.name"
+			from components.java
+			artifact sourcesJar
+			artifact javadocJar
+			pom {
+				name = "$rootProject.name"
+				description = "$projectDescription"
+				url = "$projectScmProviderUrl"+"$projectHolderUsername"+"$slash"+"$rootProject.name"
+				organization {
+					name = "$projectOrganizationName"
+					url = "$projectOrganizationUrl"
+				}
+				issueManagement {
+					system = "$projectIssueManagementSystem"
+					url = "$projectScmProviderUrl"+"$projectHolderUsername"+"$slash"+"$rootProject.name"+"$issuesPath"
+				}
+				licenses {
+					license {
+						name = "$projectLicenseName"
+						url = "$projectLicenseUrl"
+						distribution = "$projectLicenseDistribution"
+					}
+				}
+				developers {
+					developer {
+						id = "$projectHolderUsername"
+						name = "$projectLeaderName"
+					}
+				}
+				scm {
+					connection = "$projectScmGitUrlPrefix" + "$projectScmProviderDomain" + "$colon" + "$projectHolderUsername" + "$slash" + "$rootProject.name" + "$projectScmGitUrlSuffix"
+					developerConnection = "$projectScmGitUrlPrefix" + "$projectScmProviderDomain" + "$colon" + "$projectHolderUsername" + "$slash" + "$rootProject.name" + "$projectScmGitUrlSuffix"
+					url = "$projectScmGitUrlPrefix" + "$projectScmProviderDomain" + "$colon" + "$projectHolderUsername" + "$slash" + "$rootProject.name" + "$projectScmGitUrlSuffix"
+				}
+			}
+		}
+	}
+	repositories {
+		maven {
+			credentials {
+				username System.getenv("$projectRepositoriesUserNameKey") ?: project.property("$projectRepositoriesUserNameKey")
+				password System.getenv("$projectRepositoriesPasswordKey") ?: project.property("$projectRepositoriesPasswordKey")
+			}
+			def releasesRepoUrl = "$projectRepositoriesReleasesRepoUrl" as Object
+			def snapshotsRepoUrl = "$projectRepositoriesSnapshotsRepoUrl" as Object
+			url = releaseVersion ? releasesRepoUrl : snapshotsRepoUrl
+		}
+	}
+}
+
+signing {
+	if (releaseVersion) {
+		sign publishing.publications.mavenJava
+	}
+}
+
+jar {
+	manifest {
+		attributes(
+				"Name"                  : project.name,
+				"Manifest-Version"      : project.version,
+				"Implementation-Title"  : "$groupPackage" + "." + "$rootProject.name",
+				"Implementation-Version": project.version,
+				"Implementation-Vendor" : "$projectLeaderName",
+				"Created-By"            : "Gradle ${gradle.gradleVersion}",
+				"Built-By"              : "$projectLeaderName",
+				"Build-Timestamp"       : new java.text.SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ").format(new Date()),
+				"Build-Jdk"             : "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
+				"Build-OS"              : "${System.properties['os.name']} ${System.properties['os.arch']} ${System.properties['os.version']}")
+	}
+}
+
 license {
-	ext.year="2020"
-	ext.owner="Asterios Raptis"
+	ext.year="$projectInceptionYear"
+	ext.owner="$projectLeaderName"
 	header rootProject.file("src/main/resources/LICENSE.txt")
 	excludes(["**/README",
 			  "**/README.md",
@@ -71,6 +167,8 @@ license {
 			  "**/*.map",
 			  "**/*.js.map",
 			  "**/*.tmpl",
+			  "**/*.yaml",
+			  "**/*.yml",
 			  "**/*.js.tmpl",
 			  "**/*.editorconfig",
 			  "src/test/resources/**",
@@ -83,36 +181,18 @@ license {
 gradle.startParameter.excludedTaskNames += "licenseMain"
 gradle.startParameter.excludedTaskNames += "licenseTest"
 
-task sourcesJar(type: Jar) {
-	archiveClassifier.set("sources")
-	from(sourceSets.main.allJava)
-}
-
-task javadocJar(type: Jar) {
-	from javadoc
-	archiveClassifier.set("javadoc")
-	javadoc.properties.failOnError = true
-}
-
-def releaseVersion = !version.endsWith("SNAPSHOT")
-
-publishing {
-	publications {
-		maven(MavenPublication) {
-			from(components.java)
-		}
-	}
-}
-
-javadoc {
-	if(JavaVersion.current().isJava9Compatible()) {
-		options.addBooleanOption("html5", true)
-	}
-}
-
 test {
 	useJUnitPlatform()
 }
+
+jacocoTestReport {
+	reports {
+		xml.enabled true
+		html.enabled true
+	}
+}
+
+check.dependsOn jacocoTestReport
 
 dependencies {
 	compileOnly("org.projectlombok:lombok:$lombokVersion")
