--- a/gradle.properties
+++ b/gradle.properties
@@ -28,30 +28,31 @@ projectRepositoriesPasswordKey=ossrhPassword
 ###########################
 # gradle-plugins versions #
 ###########################
-gradlePluginVersionsVersion=0.41.0
+gradlePluginVersionsVersion=0.42.0
 licenseGradlePluginVersion=0.16.1
-gradlePluginLombokVersion=6.3.0
+gradlePluginLombokVersion=6.4.1
 springBootGradlePluginVersion=2.5.2
 springGradlePluginDependencyManagementVersion=1.0.11.RELEASE
+spotlessGradlePluginVersion=6.3.0
 #########################
 # dependencies versions #
 #########################
 lombokVersion=1.18.22
-entApiVersion=2.3
-entCoreVersion=2.3
+dataApiVersion=3
+entCoreVersion=3
 beanMapperApiVersion=1.2
 genericMapperVersion=2.6
-springToolExtensionsVersion=1.11-SNAPSHOT
+springToolExtensionsVersion=1.12
 springfoxSwaggerVersion=2.9.2
-xstreamVersion=1.4.18
+xstreamVersion=1.4.19
 ##############################
 # test dependencies versions #
 ##############################
 throwAbleVersion=1.7
-fileWorkerVersion=8.1
+fileWorkerVersion=8.2
 gradleMigrationDataVersion=1.2.1
-sillyIoVersion=1.6
-testcontainersVersion=1.16.2
+sillyIoVersion=1.8
+testcontainersVersion=1.16.3
 ##########################
 # for deploy on sonatype #
 ##########################
